LineRepository 에 findByIdOrThrow 메서드 추가